[tool.poetry]
name = "dlna-cast"
version = "0.1.0"
description = "A cross-platform command-line tool that casts screen and media file to remote DLNA device."
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
packages = [{include = "dlna_cast"}]
readme = "README.md"
license = "GPLv3"
keywords = ["DLNA", "ffmpeg"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
upnpclient = "^1.0.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jenkins-fire-cli = "dlna_cast.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
