[tool.poetry]
name = "dlna-cast"
version = "0.1.7"
description = "A cross-platform command-line tool that casts screen and media file to remote DLNA device."
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
packages = [{include = "dlna_cast"}]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["DLNA", "ffmpeg", "media", "smart-tv", "screen-cast", "uPnP"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
upnpclient = "^1.0.3"
python-dotenv = {extras = ["cli"], version = "^0.21.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dlna-cast = "dlna_cast.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
